# brewnet-boilerplate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONNECT_BOILERPLATE.md  LICENSE  Makefile  README.ko.md  README.md  docker-compose.override.yml  docker-compose.yml  package.json  vitest.config.ts
.claude/commands/: speckit.constitution.md
.github/workflows/: validate-stacks.yml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  go.mod  package-lock.json  package.json
backend/src/: config.py  database.ts  index.ts  routes.py
backend/tests/: conftest.py  test_api.py
dashboard/: .gitignore  package-lock.json  package.json
docs/: BREWNET-USER-STORY.md  PRD.md  TRD.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx
public/: index.html  verify.html
scripts/: validate.sh
shared/frontend-template/: Dockerfile  nginx.conf
shared/scripts/: publish-stack-branches.sh  validate-all.sh
specs/001-stack-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-remaining-frameworks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/__tests__/: api.test.ts
src/app/: globals.css  page.tsx
src/lib/: hello.ts
stacks/: docker-compose.api-only.yml.template
stacks/frontend-svelte/: .dockerignore  (+5 more)
stacks/rust-actix-web/backend/: Cargo.toml  Dockerfile
stacks/rust-actix-web/backend/src/: handler.rs  main.rs
stacks/rust-axum/backend/: .dockerignore  Cargo.toml  Dockerfile
stacks/rust-axum/backend/src/: database.rs  handler.rs  main.rs
(+225 files in other folders)
